2015-05-12  James Hunt  <james.hunt@ubuntu.com>

	* init/log.c:
	  - log_clear_unflushed(): Handle logs on the unflushed list which
	    get flushed automatically by their corresponding NihIo before
	    a request to clear the unflushed list is made. This scenario
	    is triggered when a job which has spawned processes exits, but
	    where the spawned processes continue to run and then produce
	    output before the request to clear the unflushed list is made
	    (at the time the log partition becomes writable) but after the
	    log partition becomes writable (LP: #1447756).
	* init/tests/test_log.c:
	  - test_log_new(): Added new test:
	    "ensure logger unflushed list ignores already flushed data".
	  - test_log_destroy(): Improved test
	     "ensure unflushed data moved to unflushed list with uid 0" by giving 
	    the log a parent and checking parent handling behaviour.

2015-04-24  James Hunt  <james.hunt@ubuntu.com>

	* init/log.c:
	  - Make log_flushed public to allow tests to test
	    log_handle_unflushed() properly.
	  - log_handle_unflushed():
	    - Make log a child of the list entry and the latter a child of the
	      unflushed list.
	  - log_clear_unflushed():
	    - Ensure the list entry is freed along with the log to avoid an
	      invalid entry remaining in the list (LP: #1447756).
	* init/tests/test_log.c:
	  - test_log_destroy(): Added new test:
	    - "ensure unflushed data moved to unflushed list with uid 0"

2014-09-08  James Hunt  <james.hunt@ubuntu.com>

	* util/telinit.c: Remove UPSTART_TELINIT_U_NO_WAIT check as it
	  shouldn't realistically be needed.

2014-08-21  James Hunt  <james.hunt@ubuntu.com>

	* util/telinit.c: restart_upstart():
	  - Revert to synchronous behaviour coupled with unavoidable
	    poll to ensure telinit only returns once a re-exec has
	    completed (LP: #901038).

2014-09-04  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.13.2

2014-08-29  James Hunt  <james.hunt@ubuntu.com>

	* init/cgroup.c: